@@ -1,6 +1,7 @@
 2
 
 * saves/restores to Journal
+* multiple play levels
 
 1
 
